@@ -63,6 +63,7 @@ Kristoffer Branemyr <ztion@swipnet.se>
 Kunihiro Ishiguro <kunihiro@zebra.org>
 Leendert Meyer <leen.meyer@home.nl>
 M. Meiarashi <mes@st.rim.or.jp>
+Mark Kettenis <kettenis@chello.nl>
 Mark Lundeberg <aa026@pgfn.bc.ca>
 Matt Perry <matt@primefactor.com>
 Matt Yourst <yourst@mit.edu>
